--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prebuild": "npm run copy-fonts"
   },
   "dependencies": {
+    "fontfaceobserver": "^2.3.0",
     "framer-motion": "^12.23.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
