--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "server": "node scripts/copy-fonts.js",
+    "server-dev": "nodemon scripts/copy-fonts.js",
     "postinstall": "node scripts/copy-slick-fonts.js",
     "copy-fonts": "node scripts/copy-fonts.js",
     "predev": "npm run copy-fonts",
-    "prebuild": "npm run copy-fonts"
+    "prebuild": "npm run copy-fonts",
+    "push-to-github": "node -e \"const { execSync } = require('child_process'); try { console.log('Adding changes...'); execSync('git add .', { encoding: 'utf8' }); console.log('Committing changes...'); execSync('git commit -m \"Make membership modal mobile-responsive\"', { encoding: 'utf8' }); console.log('Pushing to GitHub...'); execSync('git push origin main', { encoding: 'utf8' }); console.log('Successfully pushed changes to GitHub!'); } catch (error) { console.error('Error:', error.message); if (error.message.includes('nothing to commit')) console.log('No changes to commit.'); else if (error.message.includes('Authentication failed')) console.log('Please check your GitHub credentials.'); else console.log('Please check the error above and try again.'); }\""
   },
   "dependencies": {
     "fontfaceobserver": "^2.3.0",
@@ -23,7 +26,12 @@
     "react-scroll": "^1.9.3",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
-    "typewriter-effect": "^2.22.0"
+    "typewriter-effect": "^2.22.0",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -34,6 +42,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "nodemon": "^3.0.2",
     "eslint-plugin-react-refresh": "^0.4.22",
     "fs-extra": "^11.3.2",
     "globals": "^16.4.0",
